# Ad-Auction-Engine

./: .gitignore  README.md  a.ipynb  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
data/: ads.csv
src/ad_auction_engine/: __init__.py  api_app.py  config.py  schemas.py
src/ad_auction_engine/data/: __init__.py  generate.py  interactions.py  inventory.py
src/ad_auction_engine/engine/: __init__.py  auction.py  ranker.py
src/ad_auction_engine/ml/: __init__.py  predictor.py  train.py  trainer.py
src/ad_auction_engine/retrieval/: __init__.py  index.py  retriever.py
tests/: test_data.py  test_engine.py  test_integration.py  test_ml.py  test_retrieval.py  test_smoke.py
ui/: app.py
