[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-auction-engine"
version = "0.1.0"
description = "Sponsored search ad auction simulator with ML-ready project structure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.1.0,<38.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "streamlit>=1.43.0,<2.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["a.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
